--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <!--<title> Login and Registration Form in HTML & CSS | CodingLab </title>-->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
    </head>
 <body>
@@ -47,7 +46,7 @@
               <div class="button input-box">
                 <input type="submit" value="Submit">
               </div>
-              <div class="text sign-up-text">Don't have an account? <label for="flip">Sigup now</label></div>
+              <div class="text sign-up-text">Don't have an account? <label for="flip">Signup now</label></div>
             </div>
         </form>
       </div>
@@ -58,7 +57,7 @@
 
         <div class="signup-form">
           <div class="title">Signup</div>
-        <form action="#">
+        <form action="homepage.html" method="post">
             <div class="input-boxes">
               <div class="input-box">
                 <i class="fas fa-user"></i>
