made changes to hompage

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -89,17 +89,17 @@
 
       <div class="job">
         <div class="job-title">
-          <h2>Decor</h2>
-          <p>Rs. 1000/hr</p>
+          <h2>Chef</h2>
+          <p>Rs. 2000/hr</p>
         </div>
         <div class="job-location">
-          <h4>Bahria Phase 8</h4>
+          <h4>I-8</h4>
           <p>Islamabad</p>
         </div>
         <div class="job-description">
           <p
             ><br />
-            I will decorate your home for birthday parties and anniverseries.
+            I will cook nice desi food
             </p>
         </div>
       </div>
@@ -108,10 +108,10 @@
       <div class="job">
         <div class="job-title">
           <h2>Decor</h2>
-          <p>Rs. 1000/hr</p>
+          <p>Rs. 1200/hr</p>
         </div>
         <div class="job-location">
-          <h4>Bahria Phase 8</h4>
+          <h4>F-10</h4>
           <p>Islamabad</p>
         </div>
         <div class="job-description">
