--- a/public/seller_mode.html
+++ b/public/seller_mode.html
@@ -73,17 +73,17 @@
 
       <div class="job">
         <div class="job-title">
-          <h2>Decor</h2>
-          <p>Rs. 1000/hr</p>
+          <h2>Electrician</h2>
+          <p>Rs. 1200/hr</p>
         </div>
         <div class="job-location">
-          <h4>Bahria Phase 8</h4>
+          <h4>E11</h4>
           <p>Islamabad</p>
         </div>
         <div class="job-description">
           <p
             ><br />
-            I will decorate your home for birthday parties and anniverseries.
+            I will decorate rewire you house.
             </p>
         </div>
       </div>
@@ -91,17 +91,17 @@
      
       <div class="job">
         <div class="job-title">
-          <h2>Decor</h2>
-          <p>Rs. 1000/hr</p>
+          <h2>Chef</h2>
+          <p>Rs. 1300/hr</p>
         </div>
         <div class="job-location">
-          <h4>Bahria Phase 8</h4>
+          <h4>F8</h4>
           <p>Islamabad</p>
         </div>
         <div class="job-description">
           <p
             ><br />
-            I will decorate your home for birthday parties and anniverseries.
+            I will cook special italian food
             </p>
         </div>
       </div>
